--- a/src/index.html
+++ b/src/index.html
@@ -10,26 +10,26 @@
 
 <body>
 
-  <header class="header">
+  <header>
     <h1>Vadász Péter</h1>
     <h2>Software Developer</h2>
 
     <nav>
-      <ul class="nav">
+      <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
   </header>
 
-  <section class="tagline">
-    <div class="content-wrapper">
-      <h3>A bit more about me...</h3>
-      <p>Hi, I'm Peter, I'm 21 years old and come from Hungary. Currently I'm studying IT at university. My favourite programming languages are: Java, JS, HTML, CSS. In my freetime I like taking and editing photos.</p>
-    </div>
-  </section>
-
   <main>
+    <section class="tagline">
+      <div class="content-wrapper">
+        <h3>A bit more about me...</h3>
+        <p>Hi, I'm Peter, I'm 21 years old and come from Hungary. Currently I'm studying IT at university. My favourite programming languages are: Java, JS, HTML, CSS. In my freetime I like taking and editing photos.</p>
+      </div>
+    </section>
+
     <section class="skills">
       <div class="content-wrapper">
         <h3>Skills...</h3>
@@ -55,7 +55,7 @@
       </div>
     </section>
   </main>
-  <footer class="footer">
+  <footer>
     <div class="content-wrapper">
       <h3>Credits</h3>
       <p>This portfolio was created using <a href='https://www.codeschool.com'>Code School's</a> <a href='https://github.com/codeschool/SemanticHTMLPortfolioProject'>Semantic HTML Portfolio Project</a> template.</p>
